--- a/lingocore/pubspec.yaml
+++ b/lingocore/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.5.3
   dart_jsonwebtoken: ^3.2.0
   catppuccin_flutter: ^1.0.0
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_test:
