--- a/lingocore/pubspec.yaml
+++ b/lingocore/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.3.0
+  uuid: ^4.5.1
+  shared_preferences: ^2.5.3
+  dart_jsonwebtoken: ^3.2.0
 
 dev_dependencies:
   flutter_test:
