--- a/lingocore/pubspec.yaml
+++ b/lingocore/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^4.5.1
   shared_preferences: ^2.5.3
   dart_jsonwebtoken: ^3.2.0
+  catppuccin_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
